--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME="SIMAK POLTEKMI"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:4OyTGnZLxK46t04jJYd6H4rIS2mDxJT/1f9DhHFI1QU=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=simak_poltekmi
 DB_USERNAME=root
 DB_PASSWORD=
 
